# Inertial-navigation

./: README.md  pyproject.toml
src/inertial_nav/: __init__.py  calibration.py  dead_reckoning.py  ekf_orientation.py  synthetic_imu.py
tests/: test_inertial_nav.py
