[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "inertial-nav"
version = "1.0.0"
description = "Quaternion-based IMU dead reckoning and EKF orientation estimation"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Nagesh Yadav", email = "nageshydv@gmail.com"}]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.11",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.5",
]
notebook = [
    "jupyter>=1.0",
    "plotly>=5.18",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
